<resources>
    <string name="app_name">FIAP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_aulas">Aulas</string>
    <string name="menu_avisos">Avisos</string>
    <string name="menu_material">Material de Apoio</string>
    <string name="menu_provas">Provas</string>


    <string name="menu_notas">Notas e Faltas</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
